website: Link to the newly set-up forum from the homepage.
Also add a "community" button to make the community section a bit easier to
discover.

--- a/website/style.css
+++ b/website/style.css
@@ -139,7 +139,7 @@ body.dark {
 
 /* The sponsor nav item is styled somewhat specially, and shares a lot with the
    sponsor button on the homepage. */
-.sponsor::before, .sponsor::before {
+.sponsor::before {
   font-family: "fa-elv-sh";
   content: var(--icon-heart);
   font-size: 0.9em;
